Bug 477219 - ICC profiles applied incorrectly when saving to WebP
Summary: ICC profiles applied incorrectly when saving to WebP
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: File formats (other bugs)
Version First Reported In: 5.2.1
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-11-19 04:32 UTC by replicable+kde
Modified: 2023-12-12 12:57 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
A photo of a red bench, with an ICC profile (545.21 KB, image/webp)
2023-11-19 04:32 UTC, replicable+kde
Details

Note You need to log in before you can comment on or make changes to this bug.
Description replicable+kde 2023-11-19 04:32:54 UTC
Created attachment 163282 [details]
A photo of a red bench, with an ICC profile

SUMMARY
Files with ICC profiles are not exported correctly when saving to WebP.


STEPS TO REPRODUCE
1. Open benchexport.webp in Krita
2. File > Save as... > benchexport2.webp
3. Close and reopen benchexport2.webp

OBSERVED RESULT
The bench turns blue.

EXPECTED RESULT
The bench should stay red.

SOFTWARE/OS VERSIONS
Windows: 10

ADDITIONAL INFORMATION
This is similar to a bug I found in GIMP: https://gitlab.gnome.org/GNOME/gimp/-/issues/9553
Comment 1 wolthera 2023-12-12 12:56:05 UTC
Git commit 69b11ce46fc7af4386a5c08353d3bfdf61c72c31 by Wolthera van Hövell, on behalf of Rasyuqa A. H..
Committed on 12/12/2023 at 13:55.
Pushed by woltherav into branch 'master'.

WebP: properly export color profile on RGBA model

M  +12   -2    plugins/impex/webp/kis_webp_export.cpp

https://invent.kde.org/graphics/krita/-/commit/69b11ce46fc7af4386a5c08353d3bfdf61c72c31
Comment 2 wolthera 2023-12-12 12:57:44 UTC
Git commit 2e2b6f4d8ab44232691a1f307e51a813fe285bf7 by Wolthera van Hövell tot Westerflier, on behalf of Rasyuqa A. H..
Committed on 12/12/2023 at 13:57.
Pushed by woltherav into branch 'krita/5.2'.

WebP: properly export color profile on RGBA model

M  +12   -2    plugins/impex/webp/kis_webp_export.cpp

https://invent.kde.org/graphics/krita/-/commit/2e2b6f4d8ab44232691a1f307e51a813fe285bf7