WebP: properly export color profile on RGBA model

BUG: 477219